# flappy_bevy

./: Cargo.toml  LICENSE  README.md
src/: animation.rs  bird.rs  bounds_deletion.rs  clouds.rs  gamedata.rs  gamestate.rs  main.rs  mountains.rs  physics.rs  pipes.rs  screens.rs
